#Nmap Changelog ($Id$); -*-text-*-

o Increased effectiveness of service scan soft matches. Previously, all probes
  which matched the port being scanned would be sent regardless of whether the
  service was soft matched; softmatch lines only restricted non-port-matching
  probes from being sent. Now, a soft match will cause ALL non-service-matching
  probes to be skipped, even if the port number matches. [Daniel Miller]

o [GH#1112] Resolved crash opportunities caused by unexpected libpcap version
  string format. [Gisle Vanem, nnposter]

o [NSE][GH#1083] New set of Telnet softmatches for version detection based on
  Telnet DO/DON'T options offered, covering a wide variety of devices and
  operating systems. [D Roberson]

o [NSE][GH#1090] Fix false positives in rexec-brute by checking responses for
  indications of login failure. [Daniel Miller]

o [NSE][GH#1099] Fix http-fetch to keep downloaded files in separate
  destination directories. [Aniket Pandey]

o [NSE] Added two new fingerprints to http-default-accounts
  (Hikvision DS-XXX Network Camera and NUOO DVR) [Paulino Calderon]

o Add the --resolve-all option to resolve and scan all IP addresses of a host.
  This essentially replaces the resolveall NSE script. [Daniel Miller]

o [NSE] VNC scripts now support Apple Remote Desktop authentication (auth type
  30) [Daniel Miller]

o Added a new service detection match for WatchGuard Authentication Gateway. 
  [Paulino Calderon]

o [NSE][GH#1074] Added three new fingerprints to http-default-accounts
  (ActiveMQ, Purestorage and Axis Network Cameras) [Rob Fitzpatrick, Paulino Calderon]

o [NSE] tls-alpn checks TLS servers for Application Layer Protocol Negotiation
  (ALPN) support and reports supported protocols. ALPN largely replaces NPN,
  which tls-nextprotoneg was written for. [Daniel Miller]

o [NSE][GH#1038][GH#1037] Script qscan was not observing interpacket delays
  (parameter qscan.delay). [nnposter]
